Update wordings of frame craft

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
             <div class="service-right">
                 <h2>Handcrafted Frames</h2>
                 <p>
-                    I’ve dedicated years to the art of handcrafting frames that bring your cherished moments to life. Each frame I create is lovingly handmade, ensuring that your artwork receives the perfect touch of elegance and warmth. In a world filled with mass-produced items, there’s something truly special about giving or receiving a handcrafted frame—it’s a gift that holds a piece of my heart and hands in every corner.
-                I invite you to bring your treasured memories, photos, or special artwork to our shop. Every piece you entrust to me will be handled with the utmost care, as if it were my own. Let’s create something beautiful together.
+                I’ve dedicated years to crafting handmade frames that bring your cherished moments to life.
+                    Each piece is created with love and care, adding a touch of elegance to your artwork.
+                    In a world of mass production, there’s something truly special about a handcrafted frame.
+                    Bring your treasured memories to our shop, and every piece you entrust to me will be
+                    handled with the utmost care
                 </p>
                 <a href="mailto:your-email@example.com" class="contact-button">Contact Me</a>
             </div>
